// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ticket message meta chat-contact-form should add a \`via contact form from https://...\` because the message was sent via chat contact form 1`] = `
<span
  class="from"
>
  <span
    class="fromLabel"
  >
    via
  </span>
   
  <span
    class="fromValue"
  >
    <span>
      <b>
        contact form
      </b>
       
      from
       
      <a
        href="https://gorgias.com/best-helpdesk-ever/"
        rel="noopener noreferrer"
        target="_blank"
        title="https://gorgias.com/best-helpdesk-ever/"
      >
        https://gorgias.com/best-helpdesk-ever/
      </a>
    </span>
  </span>
</span>
`;

exports[`ticket message meta chat-contact-form should add a \`via contact form\` because the message was sent via chat contact form (but no current_url metadata) 1`] = `
<span
  class="from"
>
  <span
    class="fromLabel"
  >
    via
  </span>
   
  <span
    class="fromValue"
  >
    <span>
      <b>
        contact form
      </b>
    </span>
  </span>
</span>
`;

exports[`ticket message meta facebook should not display link when IDs are missing 1`] = `null`;

exports[`ticket message meta live-chat-message should add a \`from https://...\` with because the message was sent via live chat 1`] = `
<span
  class="from"
>
  <span
    class="fromLabel"
  >
    from
  </span>
   
  <span
    class="fromValue"
  >
    <a
      href="https://gorgias.com/best-helpdesk-ever/"
      rel="noopener noreferrer"
      target="_blank"
      title="https://gorgias.com/best-helpdesk-ever/"
    >
      https://gorgias.com/best-helpdesk-ever/
    </a>
  </span>
</span>
`;

exports[`ticket message meta should add a -sent via campaign- label because the message was sent by a campaign on a gorgias-chat integration 1`] = `
<span
  class="from"
>
  <span
    class="fromLabel"
  >
    sent via a
  </span>
   
  <span
    class="fromValue"
  >
    <b>
      <a
        title="Campaign"
        to="/app/settings/integrations/gorgias_chat/118/campaigns/123"
      >
        <i
          class="material-icons mr-1"
        >
          settings
        </i>
        "Campaign"
      </a>
    </b>
  </span>
</span>
`;

exports[`ticket message meta should add a -sent via campaign- label because the message was sent by a campaign on a smooch_inside integration 1`] = `
<span
  class="from"
>
  <span
    class="fromLabel"
  >
    sent via a
  </span>
   
  <span
    class="fromValue"
  >
    <b>
      <a
        title="Campaign"
        to="/app/settings/integrations/smooch_inside/118/campaigns/123"
      >
        <i
          class="material-icons mr-1"
        >
          settings
        </i>
        "Campaign"
      </a>
    </b>
  </span>
</span>
`;
